make sure titles are truncated

--- a/games/static/base.css
+++ b/games/static/base.css
@@ -2249,6 +2249,10 @@ input:checked + .toggle-bg {
   max-width: 20ch;
 }
 
+.min-w-30char {
+  min-width: 30ch;
+}
+
 .max-w-30char {
   max-width: 30ch;
 }
